# qwen3.5-35B3A-flash-mlx-turbo-quant

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  llm_in_a_flash_paper.md  optimization_plan.md  perf_optimization_plan.md  run.py
flash_qwen/: engine.py  model.py  profile_routing.py
scripts/: collect_routing_data.py  measure_moe_prediction.py
src/: cache.rs  config.rs  engine.rs  main.rs  memory.rs  splitter.rs  tokenizer.rs
src/model/: gemma4_attention.rs  mlp.rs  mod.rs  moe.rs  norm.rs
